# agent-kanban

./: .bumpversion.cfg  .env.example  .gitignore  .mcp.json  .playwright-disabled  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  tasks.py
.claude/: CLAUDE.md
.devcontainer/: Dockerfile  devcontainer.json
.tmux_orchestrator/: status.json
backend/: API_DOCUMENTATION.md  API_VALIDATION_REPORT.md  BACKEND_OPERATIONS_GUIDE.md  BACKEND_QA_SETUP.md  BACKEND_STATUS_REPORT.md  BACKEND_VERIFICATION_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CRITICAL_DATA_LOSS_FIX_REPORT.md  CRITICAL_DB_PROTECTION_PATCH.py  DATABASE_INTEGRITY_REPORT.md  FRONTEND_INTEGRATION_GUIDE.md  GIT_COMMIT_PLAN.md  LEGENDARY_STATUS_CERTIFICATE.md  MANUAL_TEST_SCRIPTS.md  MCP_INTEGRATION_REPORT.md  PERFORMANCE_MONITORING_REPORT.md  PERFORMANCE_SECURITY_REVIEW.md  PM_STATUS_REPORT.md  PRODUCTION_HANDOVER.md  README.md  TECHNICAL_EXCELLENCE_REPORT.md  TECHNICAL_SUMMARY_REPORT.md  agent_kanban.db-shm  agent_kanban.db-wal  agent_kanban.db.backup  agent_kanban.db.old  alembic.ini  backend_log.txt  comprehensive_mcp_results_20250820_063609.json  extract_endpoints.py  final_test_report.txt  migrate_database.py  project-closeout.md  pyproject.toml  requirements.txt  run.py  run_e2e_tests.py  run_mcp.py  run_new_tests.py  safe_start.sh  (+24 more)
backend/alembic/: env.py
backend/alembic/versions/: 09495ffe4077_add_enhanced_indexes_for_frontend_.py  a3243c705614_update_auth_system_with_roles_and_.py  a5b0a703b795_add_user_table.py  add_board_description.py  b3b80e2dd026_add_database_indexes_for_performance_.py  f0a59d52113c_add_authentication_models.py
backend/app/: __init__.py  main.py
backend/app/api/endpoints/: auth.py  boards.py  bulk.py  comments.py  health.py  history.py  statistics.py  tickets.py  users.py  websocket.py
backend/app/api/schemas/: auth.py  board.py  bulk.py  comment.py  pagination.py  ticket.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  database_protection.py  error_handlers.py  logging.py  monitoring.py  permissions.py  redis_client.py  safe_database.py
backend/app/mcp/: __init__.py  server.py  server_api.py
backend/app/models/: __init__.py  board.py  comment.py  refresh_token.py  role.py  ticket.py  ticket_history.py  user.py
backend/app/services/: cache_service.py  history_service.py  socketio_service.py  statistics_service.py  websocket_manager.py
backend/scripts/: cleanup_test_dbs.sh  launch-demo.sh  monitor_database.sh  start-backend.sh
backend/tests/: conftest.py  test_api_integration.py  test_api_integration_fixed.py  test_bulk_operations.py  test_database_isolation.py  test_debug_fixture.py  test_drag_drop_logging.py  test_enhanced_statistics.py  test_error_handlers.py  test_history_endpoints.py  test_statistics_service.py  test_websocket_database_integration.py  test_websocket_manager.py
docs/: AGENT_PERFORMANCE_CRISIS_REPORT.md  CHAOS_TESTING_EXTREME_LOAD_REPORT.md  COMPLETE_SYSTEM_DEMO.md  CRITICAL_DRAG_DROP_DATA_LOSS_REPORT.md  DEMO_INSTRUCTIONS.md  DEPLOYMENT_BLOCKER_DATA_CORRUPTION_REPORT.md  DRAG_DROP_BUG_ANALYSIS.md  FINAL_E2E_TEST_REPORT.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_PROJECT_COMPLETION_REPORT.md  FINAL_SYSTEM_VALIDATION_CHECKLIST.md  FRONTEND_PERFORMANCE_MONITORING_REPORT.md  MCP_INTEGRATION_REPORT.md  PERFORMANCE_CHECK_REPORT_15MIN.md  PERFORMANCE_DEEP_DIVE_REPORT.md  PLAYWRIGHT_EMERGENCY_DISABLE.md  PM_AGENT_REASSIGNMENT_023920.md  PM_AGENT_STATUS_REPORT.md  PM_CRITICAL_GIT_INTERVENTION_025454.md  PM_ESCALATED_TESTING_PROTOCOL_21-20.md  PM_FINAL_SESSION_STATUS_20250820.md  PM_FINAL_STATUS_030000.md  PM_FINAL_STRESS_TEST_COMPLETION_21-25.md  PM_GIT_STAGING_ALERT_024951.md  PM_IDLE_AGENT_REPORT_023341.md  PM_IDLE_AGENT_REPORT_023734.md  PM_IDLE_DETECTION_WORKAROUND.md  PM_KNOWN_FALSE_POSITIVES.md  PM_QA_TASK_ASSIGNMENT_024555.md  PM_SESSION_HEALTH_REPORT_030459.md  PM_SESSION_RESTART_031002.md  PM_STATUS_REPORT_16-10-45.md  PM_STATUS_REPORT_21-05-04.md  PM_STRESS_TEST_DIRECTIVE_21-15.md  PM_TASK_ASSIGNMENT_024343.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_INFRASTRUCTURE_VALIDATION_REPORT.md  QA_10_MINUTE_TEST_REPORT_2115.md  QA_BUG_REPORT_20250820.md  (+25 more)
(+504 files in other folders)
